// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatLayout should render default FloatLayout 1`] = `
<view
  class="at-float-layout"
>
  <view
    class="at-float-layout__overlay"
  />
  <view
    class="at-float-layout__container layout"
  >
    
    <view
      class="layout-body"
    >
      <scroll-view
        class="layout-body__content"
        scrollwithanimation="false"
        scrollx="false"
        scrolly="true"
      >
        这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写
      </scroll-view>
    </view>
  </view>
</view>
`;

exports[`FloatLayout should render prop -- isOpened 1`] = `
<view
  class="at-float-layout at-float-layout--active"
>
  <view
    class="at-float-layout__overlay"
  />
  <view
    class="at-float-layout__container layout"
  >
    
    <view
      class="layout-body"
    >
      <scroll-view
        class="layout-body__content"
        scrollwithanimation="false"
        scrollx="false"
        scrolly="true"
      >
        这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写
      </scroll-view>
    </view>
  </view>
</view>
`;

exports[`FloatLayout should render prop -- title 1`] = `
<view
  class="at-float-layout at-float-layout--active"
>
  <view
    class="at-float-layout__overlay"
  />
  <view
    class="at-float-layout__container layout"
  >
    <view
      class="layout-header"
    >
      <text
        class="layout-header__title"
      >
        这是个标题
      </text>
      <view
        class="layout-header__btn-close"
      />
    </view>
    <view
      class="layout-body"
    >
      <scroll-view
        class="layout-body__content"
        scrollwithanimation="false"
        scrollx="false"
        scrolly="true"
      >
        这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写这是内容区 随你怎么写这是内容区 随你怎么写这是内容区
随你怎么写
      </scroll-view>
    </view>
  </view>
</view>
`;
